[tool.poetry]
name = "st-stateful"
version = "0.3.0"
description = "Wrappers around streamlit widgets to hide state management"
authors = ["lum4chi <francesco.lumachi@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "st_stateful"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
